<resources>
    <string name="app_name">FaceScan</string>
    <string name="action_settings">Settings</string>
    <string name="description_info">Select an image or open camera</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_otp">Enter Otp</string>
    <string name="registration">Registration</string>
    <string name="username">Username</string>
    <string name="send_otp">Send Otp</string>
    <string name="left_eyebrow">Left Eyebrow</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="right_eyebrow">Right Eyebrow</string>
    <string name="left_eye">Left Eye</string>
    <string name="right_eye">Right Eye</string>
    <string name="nose">Nose</string>
    <string name="upper_lip">Upper lip</string>
    <string name="lower_lip">Lower lip</string>
    <string name="complete_scan">Complete Scan?\nRescan with clear image</string>
    <string name="rescan_data">Rescan Data</string>
    <string name="select_image_file">Select Image File</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="re_scan">Re-Scan</string>
    <string name="save_data">Save Data</string>
    <string name="name">Name</string>
    <string name="upload_data">Upload Data</string>

    <!--to toggle the open close button of the navigation drawer-->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="face">Face</string>
    <string name="face_parts">Face Parts</string>
</resources>
